# ava

./: .dockerignore  .gitignore  .yarnrc.yml  AGENTS.md  LICENSE  README.md  SYNC_STATUS_ANALYSIS.md  bunfig.toml  docker-compose.dev.yml  docker-compose.yml  drizzle.config.ts  eslint-suppressions.json  next.config.ts  package-lock.json  package.json  prisma.config.ts  tsconfig.json  vitest.config.ts
.claude/: launch.json
.github/: CODEOWNERS
.husky/: commit-msg  pre-commit
config/: dependency-cruiser.cjs  eslint.config.mjs  jscpd.json  knip.json  playwright.config.ts  playwright.scenarios.config.ts  vitest.config.ts
docker/: nginx.conf
docs/: architecture-current.md  architecture-future.md  architecture.md  auth-and-integrations-design.md  auth.md  azure-ad-login.md  deploy-demo.md  deploy-tier3-self-hosted.md  development.md  document-text-extraction.md  full-app-demo-audit.md  full-app-demo-plan.md  local-first-deploy.md  local-helper-design.md  quality.md  roundtrip-handoff.md  self-hosted-entra.md  server-runtime-deploy.md  server-runtime.md  tauri-oauth-setup.md  test-and-tooling-status.md
helper-app/: .gitignore  .goreleaser.yml  README.md  build.ts  bunfig.toml  go.mod  go.sum  main.go  package.json  runtime.go  tsconfig.json
helper-ui/: .gitignore  README.md  bunfig.toml  make-icons.ts  package.json  tsconfig.json
office-addin/: README.md  build.ts  tsconfig.json
patches/: lint-staged@17.0.7.patch
prisma/: init.sql  schema.prisma
public/: manifest.json  sw.js
reports/: A11Y-DEBT.md  BASELINE.md
scripts/: analyze-unanalyzed.ts  bootstrap-local-first.sh  build-demo-repo.ts  build-demo.sh  build-tauri.sh  cleanup-apple-double.ts  cleanup-junk-docs.ts  generate-demo-manifest.ts  generate-sqlite-schema.ts  mark-unanalyzed-docs.ts  migrate-pg-to-git.ts  reset-analysis-errors.ts  reset-llm-errors.ts  (+14 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+1761 files in other folders)
