[package]
name = "ava"
version = "0.1.0"
description = "AVA — Local-first CRM för advokatbyråer"
authors = ["AVA contributors"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77"

[lib]
name = "ava_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
# Tauri Plugin Sidecar — låter oss spawn:a Next.js + WebDAV-servern
# som child-processer från Rust-sidan vid app-start.

[features]
# Bygg-tid-features:
#   - `custom-protocol`: Tauri's recommended path för CSP-säkra responses
custom-protocol = ["tauri/custom-protocol"]
